--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -320,11 +320,7 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
 # CONFIG_MODULE_COMPRESS is not set
@@ -1993,7 +1989,7 @@ CONFIG_WLAN_VENDOR_ATH=y
 # CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 CONFIG_WIL6210_PLATFORM_MSM=y
@@ -2303,7 +2299,7 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_DIAGFWD_BRIDGE_CODE=y
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 CONFIG_OKL4_PIPE=y
 CONFIG_VSERVICES_SERIAL=y
 CONFIG_VSERVICES_SERIAL_SERVER=y
@@ -3070,15 +3066,15 @@ CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 # CONFIG_MSM_SDE_ROTATOR_XLOG_DEBUG is not set
 CONFIG_MSM_NPU=y
-CONFIG_DVB_MPQ=m
+CONFIG_DVB_MPQ=y
 
 #
 # Qualcomm Technologies, Inc. Demux device config
 #
-CONFIG_DVB_MPQ_DEMUX=m
+CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_NUM_DMX_DEVICES=4
 CONFIG_DVB_MPQ_TSPP1=y
-CONFIG_TSPP=m
+CONFIG_TSPP=y
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_TEST_DRIVERS is not set
 # CONFIG_DVB_PLATFORM_DRIVERS is not set
@@ -3948,7 +3944,7 @@ CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
+CONFIG_MMC_TEST=y
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 CONFIG_MMC_PARANOID_SD_INIT=y
@@ -4390,7 +4386,7 @@ CONFIG_ION_POOL_FILL_MARK=100
 #
 # Qualcomm Atheros CLD WLAN module
 #
-CONFIG_QCA_CLD_WLAN=m
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCA_CLD_WLAN_PROFILE="default"
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
@@ -4418,7 +4414,7 @@ CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
 CONFIG_IPA3_MHI_PRIME_MANAGER=y
 CONFIG_IPA_UT=y
-CONFIG_MSM_11AD=m
+CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
 CONFIG_IPA3_REGDUMP=y
 CONFIG_IPA3_REGDUMP_SM8150=y
@@ -4620,7 +4616,7 @@ CONFIG_QCOM_SM8150_LLCC=y
 # CONFIG_QCOM_ATOLL_LLCC is not set
 # CONFIG_QCOM_SDXPRAIRIE_LLCC is not set
 # CONFIG_QCOM_LLCC_AMON is not set
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QCOM_QMI_HELPERS=y
 CONFIG_QCOM_QMI_RMNET=y
 CONFIG_QCOM_QMI_DFC=y
@@ -5181,8 +5177,8 @@ CONFIG_ESOC_MDM_DBG_ENG=y
 #
 # Qualcomm RmNet extensions
 #
-CONFIG_RMNET_PERF=m
-CONFIG_RMNET_SHS=m
+CONFIG_RMNET_PERF=y
+CONFIG_RMNET_SHS=y
 
 #
 # Firmware Drivers
