--- a/arch/arm64/boot/dts/qcom/cepheus-sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/cepheus-sm8150.dtsi
@@ -629,3 +629,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 &mdss_dsi_phy0 {	
        qcom,panel-allow-phy-poweroff;
 };
+
+&mdss_dsi_phy0 {
+	qcom,panel-allow-phy-poweroff;
+};
