--- a/arch/arm64/boot/dts/qcom/cepheus-sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/cepheus-sm8150.dtsi
@@ -626,3 +626,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	qcom,panel-allow-phy-poweroff;
 	qcom,dsi-phy-regulator-min-datarate-bps = <1200000000>;
 };
+
+&mdss_dsi_phy0 {
+	qcom,panel-allow-phy-poweroff;
+};
