--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -3960,19 +3960,19 @@ CONFIG_QPNP_USB_PDPHY=y
 # CONFIG_USB_LED_TRIG is not set
 # CONFIG_USB_ULPI_BUS is not set
 # CONFIG_UWB is not set
-CONFIG_MMC=y
-CONFIG_MMC_PERF_PROFILING=y
+# CONFIG_MMC is not set
+# CONFIG_MMC_PERF_PROFILING is not set
 CONFIG_PWRSEQ_EMMC=y
 CONFIG_PWRSEQ_SIMPLE=y
-CONFIG_MMC_BLOCK=y
-CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
+# CONFIG_MMC_BLOCK is not set
+# CONFIG_MMC_BLOCK_MINORS is not set
+# CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
+# CONFIG_MMC_TEST is not set
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
-CONFIG_MMC_PARANOID_SD_INIT=y
-CONFIG_MMC_CLKGATE=y
+# CONFIG_MMC_PARANOID_SD_INIT is not set
+# CONFIG_MMC_CLKGATE is not set
 # CONFIG_MMC_SIMULATE_MAX_SPEED is not set
 
 #
@@ -3980,15 +3980,15 @@ CONFIG_MMC_CLKGATE=y
 #
 # CONFIG_MMC_DEBUG is not set
 # CONFIG_MMC_ARMMMCI is not set
-CONFIG_MMC_SDHCI=y
-CONFIG_MMC_SDHCI_IO_ACCESSORS=y
+# CONFIG_MMC_SDHCI is not set
+# CONFIG_MMC_SDHCI_IO_ACCESSORS is not set
 # CONFIG_MMC_SDHCI_PCI is not set
-CONFIG_MMC_SDHCI_PLTFM=y
+# CONFIG_MMC_SDHCI_PLTFM is not set
 # CONFIG_MMC_SDHCI_OF_ARASAN is not set
 # CONFIG_MMC_SDHCI_OF_AT91 is not set
 # CONFIG_MMC_SDHCI_CADENCE is not set
 # CONFIG_MMC_SDHCI_F_SDH30 is not set
-CONFIG_MMC_SDHCI_MSM=y
+# CONFIG_MMC_SDHCI_MSM is not set
 # CONFIG_MMC_SDHCI_MSM_ICE is not set
 # CONFIG_MMC_TIFM_SD is not set
 # CONFIG_MMC_SPI is not set
