--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.170 Kernel Configuration
+# Linux/arm64 4.14.174 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -101,7 +101,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -216,6 +216,7 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
@@ -241,6 +242,9 @@ CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_SLAB_HARDENED=y
+CONFIG_SLAB_SANITIZE=y
+CONFIG_SLAB_SANITIZE_VERIFY=y
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_PROFILING=y
@@ -597,6 +601,7 @@ CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 CONFIG_PROCESS_RECLAIM=y
+CONFIG_VMSTAT_INTERVAL=20
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_ARCH_MEMORY_PROBE=y
@@ -704,13 +709,13 @@ CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
 # CONFIG_CPU_IDLE_GOV_MENU is not set
+CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_DT_IDLE_STATES=y
 
 #
 # ARM CPU Idle Drivers
 #
 CONFIG_ARM_CPUIDLE=y
-CONFIG_CPU_IDLE_GOV_TEO=y
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 
 #
@@ -1177,6 +1182,7 @@ CONFIG_CLS_U32_MARK=y
 # CONFIG_NET_CLS_RSVP6 is not set
 CONFIG_NET_CLS_FLOW=y
 # CONFIG_NET_CLS_CGROUP is not set
+# CONFIG_NET_CLS_BPF is not set
 # CONFIG_NET_CLS_FLOWER is not set
 # CONFIG_NET_CLS_MATCHALL is not set
 CONFIG_NET_EMATCH=y
@@ -1234,7 +1240,6 @@ CONFIG_XPS=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
 CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
 # CONFIG_BPF_STREAM_PARSER is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
@@ -2621,7 +2626,6 @@ CONFIG_QPNP_SMB5=y
 # CONFIG_QPNP_QNOVO is not set
 CONFIG_QPNP_QNOVO5=y
 CONFIG_SMB1390_CHARGE_PUMP=y
-# CONFIG_SMB1398_CHARGER is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -4372,15 +4376,15 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_VSOC is not set
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
-CONFIG_VMSTAT_INTERVAL=20
 CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
-CONFIG_ION_POOL_AUTO_REFILL=y
 # CONFIG_ION_CARVEOUT_HEAP is not set
 # CONFIG_ION_CHUNK_HEAP is not set
 # CONFIG_ION_CMA_HEAP is not set
 # CONFIG_ION_FORCE_DMA_SYNC is not set
 # CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE is not set
+CONFIG_ION_POOL_AUTO_REFILL=y
+CONFIG_ION_POOL_FILL_MARK=100
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_LNET is not set
@@ -4676,6 +4680,7 @@ CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 # CONFIG_ICNSS_DEBUG is not set
 CONFIG_ICNSS_QMI=y
+# CONFIG_CNSS_TIMESYNC is not set
 CONFIG_QCOM_EUD=y
 CONFIG_QCOM_MINIDUMP=y
 CONFIG_MINIDUMP_MAX_ENTRIES=200
@@ -5165,7 +5170,6 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ANDROID_SIMPLE_LMK=y
-CONFIG_ANDROID_SIMPLE_LMK_AGGRESSION=2
 CONFIG_ANDROID_SIMPLE_LMK_MINFREE=128
 CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=200
 # CONFIG_LIBNVDIMM is not set
@@ -5292,7 +5296,9 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+# CONFIG_NTFS_RW is not set
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
@@ -5300,9 +5306,6 @@ CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:exfat:s0"
 # CONFIG_EXFAT_DEBUG is not set
 # CONFIG_EXFAT_UEVENT is not set
-CONFIG_NTFS_FS=y
-# CONFIG_NTFS_DEBUG is not set
-# CONFIG_NTFS_RW is not set
 
 #
 # Pseudo filesystems
@@ -5410,7 +5413,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_INUIT is not set
 # CONFIG_NLS_MAC_ROMANIAN is not set
 # CONFIG_NLS_MAC_TURKISH is not set
-# CONFIG_NLS_UTF8 is not set
+CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
 CONFIG_BLOCK_UNWANTED_FILES=y
@@ -5448,6 +5451,7 @@ CONFIG_PAGE_OWNER=y
 # CONFIG_PAGE_OWNER_ENABLE_DEFAULT is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
+CONFIG_OPTIMIZE_INLINING=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
@@ -5490,11 +5494,12 @@ CONFIG_ARCH_HAS_KCOV=y
 # CONFIG_WQ_WATCHDOG is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
-CONFIG_PANIC_TIMEOUT=-1
+CONFIG_PANIC_TIMEOUT=-5
 CONFIG_SCHED_DEBUG=y
 # CONFIG_SCHED_INFO is not set
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
+CONFIG_SYSRQ_SCHED_DEBUG=y
 # CONFIG_SCHEDSTATS is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
@@ -5550,7 +5555,6 @@ CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
 # CONFIG_IPC_LOGGING is not set
-# CONFIG_QCOM_RTB is not set
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
 # CONFIG_DMA_API_DEBUG is not set
@@ -5632,12 +5636,15 @@ CONFIG_HARDENED_USERCOPY=y
 # CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
 CONFIG_FORTIFY_SOURCE=y
 # CONFIG_STATIC_USERMODEHELPER is not set
+CONFIG_PAGE_SANITIZE=y
+CONFIG_PAGE_SANITIZE_VERIFY=y
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
+CONFIG_SECURITY_SELINUX_SIDTAB_HASH_BITS=9
 CONFIG_SECURITY_SMACK=y
 # CONFIG_SECURITY_SMACK_BRINGUP is not set
 # CONFIG_SECURITY_SMACK_NETFILTER is not set
