--- a/arch/arm64/configs/cepheus_perf_defconfig
+++ b/arch/arm64/configs/cepheus_perf_defconfig
@@ -376,11 +376,11 @@ CONFIG_MSDOS_PARTITION=y
 # CONFIG_SUN_PARTITION is not set
 # CONFIG_KARMA_PARTITION is not set
 CONFIG_EFI_PARTITION=y
+# CONFIG_EFI is not set
 # CONFIG_SYSV68_PARTITION is not set
 # CONFIG_CMDLINE_PARTITION is not set
 CONFIG_BLOCK_COMPAT=y
 CONFIG_BLK_MQ_PCI=y
-
 #
 # IO Schedulers
 #
