--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -732,7 +732,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not  is not sett
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 
@@ -4706,7 +4706,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_MSM_AGL is not set
 CONFIG_RMNET_CTL=y
 # CONFIG_RMNET_CTL_DEBUG is not set
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
