--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -150,7 +150,7 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
-CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_FAIR_GROUP_SCHED is not set
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
@@ -163,14 +163,14 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
-CONFIG_SCHED_CORE_CTL=y
+# CONFIG_SCHED_CORE_CTL is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
-CONFIG_SCHED_AUTOGROUP=y
+# CONFIG_SCHED_AUTOGROUP is not set 
 CONFIG_SCHED_TUNE=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
@@ -4062,7 +4062,7 @@ CONFIG_EDAC_LEGACY_SYSFS=y
 CONFIG_EDAC_KRYO_ARM64=y
 # CONFIG_EDAC_KRYO_ARM64_POLL is not set
 # CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE is not set
-CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE=y
+# CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE is not set
 # CONFIG_EDAC_GIC is not set
 # CONFIG_EDAC_XGENE is not set
 # CONFIG_EDAC_CORTEX_ARM64 is not set
